// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers peersReducer should correctly getPeers 1`] = `
Object {
  "connecting": false,
  "disconnecting": false,
  "isPeersLoading": true,
  "peers": Array [],
  "peersLoadingError": null,
}
`;

exports[`reducers peersReducer should correctly receivePeers 1`] = `
Object {
  "connecting": false,
  "disconnecting": false,
  "isPeersLoading": false,
  "peers": "foo",
  "peersLoadingError": null,
}
`;

exports[`reducers peersReducer should handle initial state 1`] = `
Object {
  "connecting": false,
  "disconnecting": false,
  "isPeersLoading": false,
  "peers": Array [],
  "peersLoadingError": null,
}
`;
